--- a/fase3/css/estilos.css
+++ b/fase3/css/estilos.css
@@ -2,6 +2,10 @@ header{
 
 background-color:lightseagreen;
 padding: 9px;
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: center;
 }
 
 nav{
