--- a/fase4/css/estilos.css
+++ b/fase4/css/estilos.css
@@ -54,3 +54,24 @@ aside{
     display: block;   
     clear: both;
 }
+
+@media screen and (max-width:600px) {
+    header {
+    
+        flex-direction:column ;
+
+    }
+     
+    section {
+   
+     
+        justify-content: flex-start;
+
+    }
+     
+    
+
+}
+
+
+
